@@ -87,8 +87,8 @@ public class DigitsManager extends ReactContextBaseJavaModule implements Lifecyc
         DigitsSession session = Digits.getSessionManager().getActiveSession();
         if (session != null) {
             WritableMap sessionData = new WritableNativeMap();
-            sessionData.putString("userId", new Long(session.getId()).toString());
-            sessionData.putString("phoneNumber", new Long(session.getPhoneNumber()).toString());
+            sessionData.putString("userId", Long.valueOf(session.getId()).toString());
+            sessionData.putString("phoneNumber", session.getPhoneNumber().replaceAll("[^0-9]", ""));
             sessionData.putString("email", session.getEmail().getAddress());
             TwitterAuthToken authToken = (TwitterAuthToken)session.getAuthToken();
             sessionData.putString("authToken", authToken.token);
